fix button spacing on activity list

--- a/ui/app/components/app/transaction-list-item/index.scss
+++ b/ui/app/components/app/transaction-list-item/index.scss
@@ -29,6 +29,10 @@
       line-height: 1rem;
     }
 
+    & > .button:first-child {
+      margin-right: 6px;
+    }
+
     &:empty {
       padding-top: 0;
     }
